Fix columns scrollbars when overlaid with absolute content

--- a/app/components/Columns/Columns.module.scss
+++ b/app/components/Columns/Columns.module.scss
@@ -76,7 +76,9 @@ $columns-header-height: 28px;
     height: 100%;
 
     .rootColumnScroll & {
-        overflow-y: overlay;
+        overflow-y: scroll;
+        padding-left: $page-gutter;
+        padding-right: $page-gutter - $scrollbar-width;
     }
 
     .rootPadded & {
