--- a/app/styles/config/_variables.scss
+++ b/app/styles/config/_variables.scss
@@ -1,4 +1,5 @@
 $sidebar-width: 147px;
+$scrollbar-width: 18px;
 $page-header-height: 94px;
 $page-height: calc(100vh - #{$page-header-height});
 $page-gutter: 48px;
